--- a/app/src/main/res/layout/fragment_find_pw.xml
+++ b/app/src/main/res/layout/fragment_find_pw.xml
@@ -4,6 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:fitsSystemWindows="true"
 	tools:context=".ui.login.FindIdFragment">
 
 	<ScrollView
@@ -165,6 +166,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="0dp"
 				android:layout_margin="5dp"
+				android:enabled="false"
 				android:text="@string/common_auth_request"
 				app:layout_constraintBottom_toBottomOf="@id/et_find_pw_mobile"
 				app:layout_constraintEnd_toEndOf="@id/et_find_pw_mobile"
@@ -222,6 +224,7 @@
 				android:layout_marginHorizontal="40dp"
 				android:layout_marginTop="50dp"
 				android:layout_marginBottom="40dp"
+				android:enabled="false"
 				android:text="비밀번호 찾기"
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
