Feat: 회원가입 navigation 연결

--- a/app/src/main/res/navigation/login_graph.xml
+++ b/app/src/main/res/navigation/login_graph.xml
@@ -9,7 +9,7 @@
 		android:id="@+id/login"
 		android:name="com.protect.jikigo.ui.login.LoginFragment"
 		android:label="로그인 화면"
-		tools:layout="@layout/fragment_login" >
+		tools:layout="@layout/fragment_login">
 		<action
 			android:id="@+id/action_login_to_signUpFirst"
 			app:destination="@id/signUpFirst" />
@@ -21,7 +21,7 @@
 		android:id="@+id/signUpFirst"
 		android:name="com.protect.jikigo.ui.login.SignUpFirstFragment"
 		android:label="fragment_sign_up_first"
-		tools:layout="@layout/fragment_sign_up_first" >
+		tools:layout="@layout/fragment_sign_up_first">
 		<action
 			android:id="@+id/action_signUpFirst_to_signUpSecond"
 			app:destination="@id/signUpSecond" />
@@ -33,12 +33,18 @@
 		android:id="@+id/signUpSecond"
 		android:name="com.protect.jikigo.ui.login.SignUpSecondFragment"
 		android:label="fragment_sign_up_second"
-		tools:layout="@layout/fragment_sign_up_second" />
+		tools:layout="@layout/fragment_sign_up_second">
+		<action
+			android:id="@+id/action_signUpSecond_to_login"
+			app:destination="@id/login"
+			app:popUpTo="@id/login"
+			app:popUpToInclusive="true" />
+	</fragment>
 	<fragment
 		android:id="@+id/findAccount"
 		android:name="com.protect.jikigo.ui.login.FindAccountFragment"
 		android:label="fragment_find_account"
-		tools:layout="@layout/fragment_find_account" >
+		tools:layout="@layout/fragment_find_account">
 		<action
 			android:id="@+id/action_findAccount_to_findNewPw"
 			app:destination="@id/findNewPw" />
@@ -52,7 +58,7 @@
 		android:id="@+id/webView"
 		android:name="com.protect.jikigo.ui.WebViewFragment"
 		android:label="fragment_web_view"
-		tools:layout="@layout/fragment_web_view" >
+		tools:layout="@layout/fragment_web_view">
 		<argument
 			android:name="urlMethod"
 			app:argType="com.protect.jikigo.data.WebSiteURL" />
