Design: 기사 사진 기본 배경 변경

--- a/app/src/main/res/layout/row_latest_news.xml
+++ b/app/src/main/res/layout/row_latest_news.xml
@@ -18,7 +18,7 @@
             android:layout_height="75dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_today_news_home_tmp_1" />
+            android:background="@color/gray_10" />
 
         <!-- 뉴스 정보 -->
         <LinearLayout
