--- a/app/src/main/res/layout/fragment_news_all.xml
+++ b/app/src/main/res/layout/fragment_news_all.xml
@@ -76,6 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/vp_news_all_banner"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
