--- a/app/src/main/res/layout/fragment_travel_home.xml
+++ b/app/src/main/res/layout/fragment_travel_home.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -21,110 +20,115 @@
         app:strokeColor="@color/primary"
         app:strokeWidth="1dp" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!-- NestedScrollView로 감싸서 스크롤 가능하게 변경 -->
+    <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:paddingStart="18dp"
-        android:paddingEnd="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar">
+        app:layout_constraintTop_toBottomOf="@id/searchBar">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/materialCardView"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:layout_gravity="center_horizontal"
-            app:cardBackgroundColor="#F4F4F4"
-            app:cardCornerRadius="19dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:strokeWidth="0dp"
-            tools:layout_editor_absoluteX="18dp">
+            android:layout_height="wrap_content"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp">
 
-            <androidx.viewpager2.widget.ViewPager2
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/materialCardView"
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:layout_gravity="center_horizontal"
+                app:cardBackgroundColor="#F4F4F4"
+                app:cardCornerRadius="19dp"
+                app:strokeWidth="0dp">
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <LinearLayout
+                android:id="@+id/dotIndicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:gravity="end|bottom"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
+                app:layout_constraintEnd_toEndOf="@+id/materialCardView">
+
+                <ImageView
+                    android:id="@+id/dot1"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_margin="4dp"
+                    android:src="@drawable/ic_dot"
+                    android:tint="@color/white" />
+
+                <ImageView
+                    android:id="@+id/dot2"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_margin="4dp"
+                    android:src="@drawable/ic_dot" />
+
+                <ImageView
+                    android:id="@+id/dot3"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_margin="4dp"
+                    android:src="@drawable/ic_dot" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_travel_home_hot_coupon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="HOT 추천쿠폰"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
 
-        </com.google.android.material.card.MaterialCardView>
-
-        <LinearLayout
-            android:id="@+id/dotIndicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:gravity="end|bottom"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
-            app:layout_constraintEnd_toEndOf="@+id/materialCardView">
+            <TextView
+                android:id="@+id/tv_travel_home_more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="더보기"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toStartOf="@+id/imageView"
+                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
 
             <ImageView
-                android:id="@+id/dot1"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_margin="4dp"
-                android:src="@drawable/ic_dot"
-                android:tint="@color/white" />
+                android:id="@+id/imageView"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/ic_arrow_more"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
 
-            <ImageView
-                android:id="@+id/dot2"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_margin="4dp"
-                android:src="@drawable/ic_dot" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_hot_coupon_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_coupon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_travel_home_hot_coupon" >
 
-            <ImageView
-                android:id="@+id/dot3"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_margin="4dp"
-                android:src="@drawable/ic_dot" />
-        </LinearLayout>
+            </androidx.recyclerview.widget.RecyclerView>
 
-        <TextView
-            android:id="@+id/tv_travel_home_hot_coupon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="HOT 추천쿠폰"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
-
-        <TextView
-            android:id="@+id/tv_travel_home_more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="더보기"
-            android:textSize="10sp"
-            app:layout_constraintEnd_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/ic_arrow_more"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_hot_coupon_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_travel_home_hot_coupon"
-            tools:listitem="@layout/item_coupon" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
