--- a/app/src/main/res/layout/fragment_news_all.xml
+++ b/app/src/main/res/layout/fragment_news_all.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.home.news.NewsAllFragment">
 
-    <!-- 두번째 뉴스 -->
+    <!-- 첫번째 뉴스 -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_news_all_first_image"
         android:layout_width="0dp"
@@ -17,6 +17,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_news_all_first_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -41,6 +42,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintTop_toBottomOf="@id/cv_news_all_first_image"
+        app:layout_constraintBottom_toTopOf="@id/tv_news_all_first_date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -54,6 +56,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintTop_toBottomOf="@id/tv_news_all_first_title"
+        app:layout_constraintBottom_toTopOf="@id/vp_news_all_banner"
         app:layout_constraintStart_toStartOf="parent" />
 
     <!-- 배너 (ViewPager2) -->
@@ -91,6 +94,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/cv_news_all_third_image"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_news_all_second_title"
             app:layout_constraintHorizontal_weight="1">
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -111,6 +115,7 @@
             android:textColor="@android:color/black"
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/cv_news_all_second_image"
+            app:layout_constraintBottom_toTopOf="@id/tv_news_all_second_date"
             app:layout_constraintStart_toStartOf="@id/cv_news_all_second_image"
             app:layout_constraintEnd_toEndOf="@id/cv_news_all_second_image" />
 
@@ -124,7 +129,8 @@
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/tv_news_all_second_title"
             app:layout_constraintStart_toStartOf="@id/tv_news_all_second_title"
-            app:layout_constraintEnd_toEndOf="@id/tv_news_all_second_title" />
+            app:layout_constraintEnd_toEndOf="@id/tv_news_all_second_title"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
         <!-- 세번째 뉴스 -->
@@ -139,6 +145,7 @@
             app:layout_constraintStart_toEndOf="@id/cv_news_all_second_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_news_all_third_title"
             app:layout_constraintHorizontal_weight="1">
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -159,6 +166,7 @@
             android:textColor="@android:color/black"
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/cv_news_all_third_image"
+            app:layout_constraintBottom_toTopOf="@id/tv_news_all_third_date"
             app:layout_constraintStart_toStartOf="@id/cv_news_all_third_image"
             app:layout_constraintEnd_toEndOf="@id/cv_news_all_third_image" />
 
@@ -171,6 +179,7 @@
             android:textColor="@android:color/darker_gray"
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/tv_news_all_third_title"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_news_all_third_title"
             app:layout_constraintEnd_toEndOf="@id/cv_news_all_third_image" />
 
