[Feat] Travel home banner

--- a/app/src/main/res/layout/fragment_travel_home.xml
+++ b/app/src/main/res/layout/fragment_travel_home.xml
@@ -37,56 +37,38 @@
             android:paddingEnd="18dp">
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/materialCardView"
+                android:id="@+id/card_travel_banner"
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
                 android:layout_gravity="center_horizontal"
                 app:cardBackgroundColor="#F4F4F4"
                 app:cardCornerRadius="19dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:strokeWidth="0dp">
 
                 <androidx.viewpager2.widget.ViewPager2
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:id="@+id/vp_travel_banner"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent">
+
+                </androidx.viewpager2.widget.ViewPager2>
 
             </com.google.android.material.card.MaterialCardView>
 
-            <LinearLayout
-                android:id="@+id/dotIndicator"
-                android:layout_width="wrap_content"
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/indicator_travel_banner"
+                style="@style/AppTabIndicatorStyle"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:gravity="end|bottom"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
-                app:layout_constraintEnd_toEndOf="@+id/materialCardView">
-
-                <ImageView
-                    android:id="@+id/dot1"
-                    android:layout_width="10dp"
-                    android:layout_height="10dp"
-                    android:layout_margin="4dp"
-                    android:src="@drawable/ic_dot"
-                    android:tint="@color/white" />
-
-                <ImageView
-                    android:id="@+id/dot2"
-                    android:layout_width="10dp"
-                    android:layout_height="10dp"
-                    android:layout_margin="4dp"
-                    android:src="@drawable/ic_dot" />
-
-                <ImageView
-                    android:id="@+id/dot3"
-                    android:layout_width="10dp"
-                    android:layout_height="10dp"
-                    android:layout_margin="4dp"
-                    android:src="@drawable/ic_dot" />
-            </LinearLayout>
+                android:layout_marginEnd="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/card_travel_banner"
+                app:layout_constraintEnd_toEndOf="@+id/card_travel_banner" />
 
             <TextView
                 android:id="@+id/tv_travel_home_hot_coupon"
@@ -95,7 +77,7 @@
                 android:layout_marginTop="16dp"
                 android:text="HOT 추천쿠폰"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
+                app:layout_constraintTop_toBottomOf="@id/card_travel_banner" />
 
             <TextView
                 android:id="@+id/tv_travel_home_more"
@@ -105,7 +87,7 @@
                 android:text="더보기"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toStartOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
+                app:layout_constraintTop_toBottomOf="@id/card_travel_banner" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -114,7 +96,7 @@
                 android:layout_marginTop="16dp"
                 android:src="@drawable/ic_arrow_more"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
+                app:layout_constraintTop_toBottomOf="@id/card_travel_banner" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_hot_coupon_list"
