Design:  인디케이터 변경

--- a/app/src/main/res/layout/fragment_news_besides.xml
+++ b/app/src/main/res/layout/fragment_news_besides.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text="HOT TOPIC🔥"
+                android:text="오늘의 뉴스 👀"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -40,28 +40,15 @@
                 android:layout_height="0dp"
                 android:layout_weight="1" />
 
-            <TextView
-                android:id="@+id/tv_news_besides_hot_topic_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginEnd="18dp"
-                android:text="실시간 조회수 순위입니다."
-                android:textColor="@android:color/darker_gray"
-                android:textSize="12sp" />
         </LinearLayout>
 
-        <!-- ViewPager2 (배너) -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="220dp"
-            app:cardCornerRadius="16dp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="13dp">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <!-- ViewPager2 (배너) -->
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="220dp"
+                app:cardCornerRadius="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="13dp">
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/vp_news_besides_hot_topic"
@@ -69,29 +56,29 @@
                     android:layout_height="220dp"
                     android:clipChildren="false"
                     android:clipToPadding="false"
-                    android:nestedScrollingEnabled="false"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    android:nestedScrollingEnabled="false"/>
+            </androidx.cardview.widget.CardView>
+
+            <!-- 인디케이터 (배너 아래 중앙) -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-10dp"
+                android:gravity="center">
 
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/indicator_news_besides_hot_topic"
                     style="@style/AppTabIndicatorStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="22dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
 
 
         <View
             android:id="@+id/tab_divider"
             android:layout_width="match_parent"
             android:layout_height="10dp"
+            android:layout_marginTop="-10dp"
             android:background="#D9D9D9" />
 
         <!-- 최신 뉴스 -->
@@ -101,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
-            android:text="최신 뉴스"
+            android:text="최신 뉴스 🔥"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@android:color/black" />
