--- a/app/src/main/res/layout/item_news_banner.xml
+++ b/app/src/main/res/layout/item_news_banner.xml
@@ -23,8 +23,11 @@
         android:maxLines="1"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:layout_marginStart="10dp"
+        android:paddingHorizontal="10dp"
         android:layout_marginBottom="10dp"
+        android:text="dfdfdfdfd"
+        android:background="#4D000000"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
