Feat: 뉴스 큰 제목 분기

--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -64,6 +64,9 @@
 		<action
 			android:id="@+id/action_newsBesides_to_newsDetail"
 			app:destination="@id/newsDetail" />
+		<argument
+			android:name="categoryTitle"
+			app:argType="string" />
 	</fragment>
 
 	<fragment
