--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -37,20 +37,20 @@
             android:textStyle="bold"
             android:textColor="@android:color/black"
             app:layout_constraintTop_toBottomOf="@id/toolbar_news"
+            app:layout_constraintBottom_toTopOf="@id/tab_news"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingTop="12dp"
-            android:paddingBottom="5dp"
             android:paddingStart="16dp"
             android:paddingEnd="10dp"/>
 
         <ImageView
             android:id="@+id/iv_news_envorionment_big_category_icon"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="47dp"
+            android:layout_height="47dp"
             android:src="@drawable/img_environment"
-            app:layout_constraintTop_toBottomOf="@id/toolbar_news"
+            android:layout_marginBottom="7dp"
             app:layout_constraintStart_toEndOf="@id/tv_news_big_category_title"
-            app:layout_constraintBottom_toTopOf="@id/tab_news"/>
+            app:layout_constraintBottom_toBottomOf="@id/tv_news_big_category_title"/>
 
         <!-- 탭 레이아웃 -->
         <com.google.android.material.tabs.TabLayout
