--- a/app/src/main/res/layout/row_latest_news.xml
+++ b/app/src/main/res/layout/row_latest_news.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp">
+
         <!-- 뉴스 썸네일 -->
         <ImageView
             android:id="@+id/iv_news_besides_thumbnail"
@@ -18,15 +19,24 @@
             android:layout_height="75dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:background="@color/gray_10" />
+            android:background="@color/gray_10"
+            android:layout_marginRight="12dp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/iv_news_besides_thumbnail_loading"
+            android:layout_width="110dp"
+            android:layout_height="75dp"
+            android:layout_gravity="center"
+            android:background="@color/gray_10"
+            android:layout_marginRight="12dp" />
 
         <!-- 뉴스 정보 -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingStart="12dp">
+            android:orientation="vertical">
 
             <!-- 뉴스 제목 (최대 1줄) -->
             <TextView
