Feat: 공지사항 MVVM 구조로 변경, 힐트 주입

--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -53,7 +53,7 @@
 		tools:layout="@layout/fragment_notification_detail">
 		<argument
 			android:name="notification"
-			app:argType="com.protect.jikigo.data.Notification" />
+			app:argType="com.protect.jikigo.data.model.Notification" />
 	</fragment>
 
 	<fragment
