Style: 문자열 설정

--- a/app/src/main/res/layout/fragment_sign_up_first.xml
+++ b/app/src/main/res/layout/fragment_sign_up_first.xml
@@ -14,7 +14,7 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		app:title="회원가입" />
+		app:title="@string/toolbar_title_sign_up" />
 
 	<TextView
 		android:id="@+id/tv_sign_up_label"
