--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -77,6 +77,8 @@
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/darker_gray"
             android:paddingStart="10dp"
+            android:maxLines="1"
+            android:singleLine="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/iv_search_icon"
             app:layout_constraintTop_toTopOf="parent"
