--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -19,7 +19,8 @@
         android:maxLines="1"
         android:ellipsize="end"
         android:layout_marginTop="2dp"
-        android:layout_marginStart="20dp"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="10dp"/>
 
     <!-- 공지사항 날짜 -->
     <TextView
