[Fix] TravelCoupon RecyclerView & BottomSheet textColor

--- a/app/src/main/res/layout/fragment_travel_coupon.xml
+++ b/app/src/main/res/layout/fragment_travel_coupon.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".ui.travel.TravelCouponFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -14,9 +15,9 @@
         android:layout_marginBottom="10dp"
         android:clickable="true"
         android:src="@drawable/ic_arrow_up"
+        android:visibility="gone"
         app:backgroundTint="@color/white"
         app:fabCustomSize="36dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:rippleColor="@color/material_on_background_disabled"
@@ -24,25 +25,23 @@
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".ui.travel.TravelCouponFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingStart="18dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:layout_height="match_parent">
 
             <HorizontalScrollView
                 android:id="@+id/horizontalScrollView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
                 android:scrollbars="none"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +51,7 @@
                     android:id="@+id/cg_coupon_brand"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:selectionRequired="true"
                     app:singleSelection="true" />
             </HorizontalScrollView>
 
@@ -59,6 +59,7 @@
                 android:id="@+id/tv_coupon_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
                 android:text="총 00개의 상품이 있습니다."
                 android:textColor="@color/gray_50"
                 android:textSize="12sp"
@@ -93,16 +94,19 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_coupon_list"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="18dp"
+                android:layout_marginEnd="10dp"
+                android:clipToPadding="false"
+                android:nestedScrollingEnabled="false"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_coupon_count"
                 app:spanCount="2"
-                tools:listitem="@layout/item_coupon" />
+                tools:listitem="@layout/item_coupon_horizontal" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
