--- a/app/src/main/res/layout/fragment_travel_payment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_travel_payment_bottom_sheet.xml
@@ -71,6 +71,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="포인트 결제"
+			android:textColor="@color/black"
 			android:textSize="18sp"
 			android:textStyle="bold"
 			app:layout_constraintStart_toStartOf="parent"
