--- a/app/src/main/res/layout/item_ranking_dialog_page_2.xml
+++ b/app/src/main/res/layout/item_ranking_dialog_page_2.xml
@@ -21,7 +21,7 @@
         android:id="@+id/tv_ranking_dialog_page_2_content_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="많이 걸을수록 탄소 배출을 줄일 수 있어요!\n\n소나무 한 그루의 연간 탄소 흡수량은 8.6kg 입니다! 절감된 탄소량을 나무 그루 수로 환산해서 보여드려요. 🌱"
+        android:text="자동차 이용 대신 걸을수록 탄소 배출을 줄일 수 있어요!\n\n소나무 한 그루의 연간 탄소 흡수량은 8.6kg 입니다! 절감된 탄소량을 나무 그루 수로 환산해서 보여드려요. 🌱"
         android:textSize="14sp"
         android:lineSpacingExtra="5dp"
         android:textColor="@android:color/black"
