Design: 기본프사 초기화

--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -117,7 +117,7 @@
         app:shapeAppearanceOverlay="@style/RankingMyProfileRoundedImage"
         android:scaleType="centerCrop"
         android:elevation="5dp"
-        android:src="@drawable/img_today_news_home_tmp_1"
+        android:background="@drawable/background_gray10"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -185,7 +185,7 @@
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="2"
-                android:text="윈터아마멘터"
+                android:text=""
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:gravity="center_vertical"
@@ -208,7 +208,7 @@
                 android:id="@+id/tv_ranking_my_profile_walk_count"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
-                android:text="1,093"
+                android:text=""
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:gravity="end"
