Design: 걸음수 보상 바텀시트 디자인

--- a/app/src/main/res/layout/fragment_reward.xml
+++ b/app/src/main/res/layout/fragment_reward.xml
@@ -218,9 +218,10 @@
                 android:layout_width="0dp"
                 android:layout_height="300dp"
                 android:layout_marginHorizontal="25dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="44dp"
                 android:background="@drawable/shape_view_edge"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.68"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/view_reward_walk_rank" />
 
@@ -239,7 +240,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/iv_reward_walk_image"
-                tools:text="오늘의 걸음 수 : 10걸음"
+                tools:text="걸음 수 보상받기"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="@id/iv_reward_walk_image"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_walk_image"
@@ -248,14 +249,20 @@
 
             <Button
                 android:id="@+id/btn_reward_walk_point"
+                style="@style/Widget.Material3.Button.IconButton"
                 android:layout_width="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:insetLeft="0dp"
                 android:insetTop="0dp"
-                android:minWidth="30dp"
+                android:insetRight="0dp"
                 android:insetBottom="0dp"
-                tools:text="50P"
-                app:cornerRadius="5dp"
+                android:clickable="false"
+                android:padding="0dp"
+                android:minHeight="0dp"
+                android:src="@drawable/ic_arrow_more"
+                app:icon="@drawable/ic_arrow_more"
+                app:iconTint="@color/black"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_walk_image"
                 app:layout_constraintEnd_toEndOf="@id/view_reward_points"
                 app:layout_constraintTop_toTopOf="@id/iv_reward_walk_image" />
